Addimg more files

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 </head>
 <body>
 	<canvas id="aw-canvas" width="450" height="300"></canvas>
-	<script type="text/javascript" src="scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="scripts/map.js"></script>
-	<script type="text/javascript" src="scripts/mapTerrain.js"></script>
-	<script type="text/javascript" src="scripts/controller.js"></script>
-	<script type="text/javascript" src="scripts/interactives.js"></script>
-	<script type="text/javascript" src="scripts/player.js"></script>
-	<script type="text/javascript" src="scripts/map-debug.js"></script>	
+	<script type="text/javascript" data-main="scripts/game" src="scripts/libs/require.js"></script>
 </body>
 </html>
