--- a/tests/index.html
+++ b/tests/index.html
@@ -6,6 +6,7 @@
 
         <!-- QUnit includes -->
         <script src="lib/qunit-1.11.0.js"></script>
+        <script src="lib/sinon-1.7.1.js"></script>
 
         <!--Prevent Tests from auto starting-->
         <script>
